[gd_scene load_steps=3 format=3 uid="uid://dx0pwai5nk0di"]

[ext_resource type="Script" uid="uid://3rc0wp2odqcf" path="res://Planet-Section/Scripts/UI/building_icon.gd" id="1_sj01r"]
[ext_resource type="Texture2D" uid="uid://deixmur2ebu3f" path="res://icon.svg" id="2_yvxru"]

[node name="BuildingIcon" type="TextureButton"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -520.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_yvxru")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("1_sj01r")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 125.85495
offset_right = 123.0
offset_bottom = 174.85495
text = "placeholder text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
ignore_time_scale = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="HoverTimer" to="." method="_on_hover_timer_timeout"]
